tweak landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -9,54 +9,57 @@
     <meta name="keywords" content="spacemfers, mfers, space, mmo" />
     <title>spacemfers: mfers in space</title>
   </head>
-  <body>
-    <main style="max-width: 500px">
+  <body style="font-family: monospace">
+    <main style="max-width: 600px">
       <h1>SPACEMFERS: <i>mfers in space</i></h1>
       <img
         src="spacemfers.png"
         alt="spacemfers"
         style="width: 100%; max-width: 500px" />
       <p>
-        spacemfers is a work-in-progress that aims to be a browser-based,
-        open-universe, idle-clicker, lofi space sandbox mmo where mfers can
-        explore the mysteries of space together, currently in active development
-        by
+        <b>spacemfers</b> is a work-in-progress that aims to be a
+        <b>browser-based, open-universe, lofi space sandbox mmo</b> where mfers
+        can explore the mysteries of space together, currently in active
+        development by
         <a href="https://x.com/zhougsoft" target="_blank" noopener>zhoug</a>
         (me).
       </p>
       <p>
         (i'm thinking a
         <a href="https://wikipedia.org/wiki/Neopets" target="_blank" noopener>
-          neopets
-        </a>
+          neopets</a
+        >
         meets
         <a href="https://wikipedia.org/wiki/Habbo" target="_blank" noopener>
-          habbo hotel
-        </a>
+          habbo hotel</a
+        >
         meets
         <a
           href="https://wikipedia.org/wiki/Eve_Online"
           target="_blank"
           noopener>
-          eve online
-        </a>
+          eve online</a
+        >
         kinda vibe)
       </p>
       <p>
         it's being built on top of the
         <a href="https://www.farcaster.xyz" target="_blank" noopener>
-          farcaster
-        </a>
-        id system, so you'll be able to login w/ warpcast. the game can then
-        read your profile details & any connected crypto addresses wooo.
+          farcaster</a
+        >
+        id system so you can <b>login w/ warpcast</b>. that way, the game can
+        also read your profile details & any connected crypto addresses too.
       </p>
       <p>
         starting small & making things up as i go,
-        <a href="https://x.com/zhougsoft" target="_blank" noopener
-          >check twitter</a
-        >
-        for updates!
+        <i>
+          <a href="https://x.com/zhougsoft" target="_blank" noopener>
+            check twitter</a
+          >
+          for updates!
+        </i>
       </p>
+      <p>O-'</p>
     </main>
   </body>
 </html>
