--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,7 +19,7 @@
       <p>
         <b>spacemfers</b> is a work-in-progress that aims to be a
         <b>browser-based, open-universe, lofi space sandbox mmo</b> where mfers
-        can explore the mysteries of space together, currently in active
+        can explore the mysteries of space, <i>together!</i> currently in active
         development by
         <a href="https://x.com/zhougsoft" target="_blank" noopener>zhoug</a>
         (me).
