update spacemfers site w/ latest demo gif

--- a/website/index.html
+++ b/website/index.html
@@ -18,29 +18,11 @@
         style="width: 100%; max-width: 500px" />
       <p>
         <b>spacemfers</b> is a work-in-progress that aims to be a
-        <b>browser-based, open-universe, lofi space sandbox mmo</b> where mfers
-        can explore the mysteries of space, <i>together!</i> currently in active
+        <b>browser-based, open-universe, space sandbox mmo</b> where mfers (like
+        you) can explore the mysteries of space, <i>together!</i> currently in
         development by
         <a href="https://x.com/zhougsoft" target="_blank" noopener>zhoug</a>
         (me).
-      </p>
-      <p>
-        (i'm thinking a
-        <a href="https://wikipedia.org/wiki/Neopets" target="_blank" noopener>
-          neopets</a
-        >
-        meets
-        <a href="https://wikipedia.org/wiki/Habbo" target="_blank" noopener>
-          habbo hotel</a
-        >
-        meets
-        <a
-          href="https://wikipedia.org/wiki/Eve_Online"
-          target="_blank"
-          noopener>
-          eve online</a
-        >
-        kinda vibe)
       </p>
       <p>
         it's being built on top of the
@@ -59,6 +41,10 @@
           for updates!
         </i>
       </p>
+      <p>
+        <b><i>here's a gif of the work-in-progress:</i></b>
+      </p>
+      <img src="spacemfers-wip.gif" alt="spacemfers wip" style="width: 100%" />
       <p>O-'</p>
     </main>
   </body>
